--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -2,9 +2,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context="com.example.theo1.nutripocket.CreateProfile2Activity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.theo1.nutripocket.CreateProfile2Activity"
+    android:orientation="vertical"
+    android:gravity="center">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/activityLevel" />
+
+        <Spinner
+            android:spinnerMode="dropdown"
+            android:id="@+id/activityLevel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/activitySpinner"
+            android:prompt="@string/activityPrompt"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/goal"/>
+
+        <Spinner
+            android:spinnerMode="dropdown"
+            android:id="@+id/goal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/goalSpinner"
+            android:prompt="@string/goalPrompt"/>
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
 
