Blank Create Profile/Main Activity

--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.theo1.nutripocket.CreateProfile2Activity"
-    android:orientation="vertical"
-    android:gravity="center">
+    tools:context="com.example.theo1.nutripocket.CreateProfile2Activity">
+
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/acp2top"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/activityLevel" />
 
         <Spinner
-            android:spinnerMode="dropdown"
             android:id="@+id/activityLevel"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/activitySpinner"
-            android:prompt="@string/activityPrompt"/>
+            android:entries="@array/activitySpinner" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@id/acp2top">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/goal"/>
+            android:text="@string/goal" />
 
         <Spinner
-            android:spinnerMode="dropdown"
             android:id="@+id/goal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/goalSpinner"
-            android:prompt="@string/goalPrompt"/>
+            android:spinnerMode="dropdown" />
+
+
     </LinearLayout>
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
 
