--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -58,8 +58,7 @@
         android:id="@+id/gender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/genderSpinner"
-        android:prompt="@string/genderPrompt" />
+        android:entries="@array/genderSpinner" />
 
     </LinearLayout>
 
