--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -13,7 +13,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.21"
+        android:layout_weight="0.35"
         android:fontFamily="monospace"
         android:gravity="center"
         android:text="Tell Us About Yourself"
@@ -24,7 +24,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0.10">
 
 
         <EditText
@@ -60,7 +61,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="71dp">
 
             <EditText
                 android:id="@+id/age"
@@ -96,7 +97,7 @@
 
         <RelativeLayout
             android:layout_width="368dp"
-            android:layout_height="match_parent">
+            android:layout_height="80dp">
 
             <EditText
                 android:id="@+id/weight"
