Blank Create Profile/Main Activity

--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -125,7 +125,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/CP1Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:drawable/alert_light_frame"
