--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -78,11 +78,12 @@
 
             <Spinner
                 android:id="@+id/spinner2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="116dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/age" />
+                android:layout_toEndOf="@+id/age"
+                android:entries="@array/genderSpinner"/>
 
         </RelativeLayout>
 
