--- a/app/src/main/res/layout/activity_level_descriptions.xml
+++ b/app/src/main/res/layout/activity_level_descriptions.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.theo1.nutripocket.activityLevelDescriptionsActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <TextView
         android:layout_width="wrap_content"
