--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -7,17 +7,16 @@
     android:gravity="top|center"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context="com.example.theo1.nutripocket.CreateProfileActivity"
->
+    tools:context="com.example.theo1.nutripocket.CreateProfileActivity"    >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/introText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.35"
         android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Tell Us About Yourself"
+        android:text="@string/introText"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
@@ -37,7 +36,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/nameFirst"
+            android:hint="@string/nameFirst"
             android:textAlignment="center"
             android:textStyle="italic" />
 
@@ -49,7 +48,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/nameLast"
+            android:hint="@string/nameLast"
             android:textAlignment="center"
             android:textStyle="italic" />
 
@@ -68,15 +67,12 @@
             android:id="@+id/age"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/spinner2"
-            android:layout_alignBottom="@+id/spinner2"
-            android:layout_alignParentStart="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginStart="6dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@string/age"
+            android:hint="@string/age"
             android:textAlignment="center"
             android:textStyle="italic" />
 
@@ -84,12 +80,10 @@
             android:id="@+id/height"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/weight"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:inputType="number"
-            android:text="@string/height"
+            android:hint="@string/height"
             android:textAlignment="center"
             android:textStyle="italic" />
 
@@ -97,13 +91,11 @@
             android:id="@+id/weight"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="26dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:inputType="number"
-            android:text="@string/weight"
+            android:hint="@string/weight"
             android:textStyle="italic" />
 
     </LinearLayout>
@@ -120,8 +112,6 @@
             android:id="@+id/gender"
             android:layout_width="173dp"
             android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:entries="@array/genderSpinner" />
     </LinearLayout>
 
@@ -129,8 +119,9 @@
         android:id="@+id/CP1Button"
         android:layout_width="373dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.07"
         android:background="@android:drawable/alert_light_frame"
-        android:text="@string/CP1Button"
-        android:layout_weight="0.07" />
+        android:onClick="saveUserInfo"
+        android:text="@string/CP1Button" />
 
 </LinearLayout>
