--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -108,7 +108,7 @@
         android:orientation="horizontal"
         android:weightSum="1">
 
-        <Spinner
+        <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerG
             android:id="@+id/gender"
             android:layout_width="173dp"
             android:layout_height="50dp"
