--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -52,12 +52,12 @@
 
     <Button
         android:id="@+id/CP2Info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignBottom="@+id/activityLevel"
+        android:layout_alignTop="@+id/activityLevel"
         android:layout_toEndOf="@+id/activityLevel"
-        android:background="@android:drawable/ic_menu_help"
-        android:layout_alignTop="@+id/activityLevel" />
+        android:background="@android:drawable/ic_menu_help" />
 
     <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerGL
         android:id="@+id/goal"
