--- a/app/src/main/res/layout/activity_level_descriptions.xml
+++ b/app/src/main/res/layout/activity_level_descriptions.xml
@@ -52,6 +52,17 @@
         android:layout_height="wrap_content"
         android:text="@string/heavilyDesc"
         android:layout_margin="5dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/extTitle"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/extDesc"
+        android:layout_margin="5dp"/>
 
 
 </LinearLayout>
