--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -11,10 +11,10 @@
         android:id="@+id/activityLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="78dp"
-        android:entries="@array/activitySpinner"
         android:layout_above="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="78dp"
+        android:entries="@array/activitySpinner" />
 
     <LinearLayout
         android:id="@+id/CP2top"
