--- a/app/src/main/res/layout/activity_level_descriptions.xml
+++ b/app/src/main/res/layout/activity_level_descriptions.xml
@@ -8,6 +8,17 @@
     android:orientation="vertical"
     android:layout_margin="10dp">
 
+
+
+
+
+    <Button
+        android:id="@+id/returnButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
