--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -7,6 +7,7 @@
     android:gravity="top|center"
     android:orientation="vertical"
     android:weightSum="1"
+    android:background="@color/Background"
     tools:context="com.example.theo1.nutripocket.CreateProfileActivity"    >
 
     <TextView
