--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -78,7 +78,7 @@
         android:layout_marginBottom="47dp"
         android:text="@string/activityLevel"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp"
         android:textStyle="italic" />
 
@@ -86,11 +86,11 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/goal"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/goal"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp"
         android:textStyle="italic" />
 
